--- a/themes/velocity-templates-theme/docroot/_diffs/templates/crafter-generic/office_locations_template.vm
+++ b/themes/velocity-templates-theme/docroot/_diffs/templates/crafter-generic/office_locations_template.vm
@@ -19,36 +19,40 @@
 #set ($qValue = "crafterSite:$crafter-site.getData() AND localId:$local-id.getData()")
 #set ($query_parameters = {"q": $qValue})
 #set ($documentsMap = $crafterService.searchByMap($query_parameters))
-#set ($content = $documentsMap.get(0))
-
-#set ($css-path = '/velocity-templates-theme/css/')
-<link href="${css-path}main.css" rel="stylesheet" />
-
-<h1>Corporate Headquarters</h1>
-
-<table>
-	#foreach($title in $content.get("locations.item.title"))
-		<tr>
-			<td style="padding-right:40px; vertical-align:top;">
-				#set ($currentIndex = $velocityCount - 1)
-				<h2>$title</h2> <br/>
-				<div>
-					Phone: $content.get("locations.item.phone").get($currentIndex) <br/>
-					Email: $content.get("locations.item.email").get($currentIndex) <br/>
-					#set ( $justAddress = $content.get("locations.item.address").get($currentIndex).replace("<p>",""))
-					#set ( $justAddress = $justAddress.replace("</p>",""))
-					#set( $addressEncoded = $escapeTool.url($justAddress))
-					Address: $justAddress</h2>
-				</div>
-			</td>
-			<td style="padding-bottom:20px;">
-				<div style="width:250px;height:200px">
-					<iframe width="250" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-						src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=$addressEncoded&ie=UTF8&z=12&t=m&iwloc=near&output=embed">
-					</iframe>
-				</div>
-			</td>
-		</tr>
-		&nbsp;
-	#end
-</table>
+#if ($documentsMap.size() > 0)
+	#set ($content = $documentsMap.get(0))
+	
+	#set ($css-path = '/velocity-templates-theme/css/')
+	<link href="${css-path}main.css" rel="stylesheet" />
+	
+	<h1>Corporate Headquarters</h1>
+	
+	<table>
+		#foreach($title in $content.get("locations.item.title"))
+			<tr>
+				<td style="padding-right:40px; vertical-align:top;">
+					#set ($currentIndex = $velocityCount - 1)
+					<h2>$title</h2> <br/>
+					<div>
+						Phone: $content.get("locations.item.phone").get($currentIndex) <br/>
+						Email: $content.get("locations.item.email").get($currentIndex) <br/>
+						#set ( $justAddress = $content.get("locations.item.address").get($currentIndex).replace("<p>",""))
+						#set ( $justAddress = $justAddress.replace("</p>",""))
+						#set( $addressEncoded = $escapeTool.url($justAddress))
+						Address: $justAddress</h2>
+					</div>
+				</td>
+				<td style="padding-bottom:20px;">
+					<div style="width:250px;height:200px">
+						<iframe width="250" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+							src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=$addressEncoded&ie=UTF8&z=12&t=m&iwloc=near&output=embed">
+						</iframe>
+					</div>
+				</td>
+			</tr>
+			&nbsp;
+		#end
+	</table>
+#else
+	<h2>Requested article was not found</h2>
+#end
